--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,8 @@ cmake_minimum_required (VERSION 2.8)
 project(libcbor)
 include(CTest)
 
-
 set(CMAKE_C_FLAGS "-std=c99")
-set(CMAKE_C_FLAGS_DEBUG "-O0 -Wall -pedantic -g -ggdb")
+set(CMAKE_C_FLAGS_DEBUG "-O0 -Wall -pedantic -g -ggdb -DDEBUG=true")
 set(CMAKE_EXE_LINKER_FLAGS "-g")
 
 enable_testing()
