Coverage & better int manipulation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(libcbor)
 include(CTest)
 
 set(CMAKE_C_FLAGS "-std=c99")
-set(CMAKE_C_FLAGS_DEBUG "-O0 -Wall -pedantic -g -ggdb -DDEBUG=true")
-set(CMAKE_EXE_LINKER_FLAGS "-g")
+set(CMAKE_C_FLAGS_DEBUG "-O0 -Wall -pedantic -g -ggdb --coverage -DDEBUG=true")
+set(CMAKE_EXE_LINKER_FLAGS "-g --coverage")
 
 enable_testing()
 add_custom_target(test ${CMAKE_CTEST_COMMAND} -V)
