--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ include(CTest)
 
 set(CMAKE_C_FLAGS "-std=c11")
 set(CMAKE_C_FLAGS_DEBUG "-O0 -Wall -pedantic -g -ggdb --coverage -DDEBUG=true")
+
+set(CMAKE_C_FLAGS_RELEASE "-O3 -Wall -pedantic")
+
 set(CMAKE_EXE_LINKER_FLAGS "-g --coverage")
 
 enable_testing()
@@ -16,3 +19,4 @@ include_directories(src)
 subdirs(src)
 subdirs(demo)
 subdirs(test)
+subdirs(bench)
