--- a/doc/Makefile
+++ b/doc/Makefile
@@ -175,3 +175,6 @@ pseudoxml:
 	$(SPHINXBUILD) -b pseudoxml $(ALLSPHINXOPTS) $(BUILDDIR)/pseudoxml
 	@echo
 	@echo "Build finished. The pseudo-XML files are in $(BUILDDIR)/pseudoxml."
+
+livehtml: html
+	sphinx-autobuild -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
