--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ include(CTest)
 set(CMAKE_C_FLAGS "-std=c11")
 set(CMAKE_C_FLAGS_DEBUG "-O0 -Wall -pedantic -g -ggdb --coverage -DDEBUG=true")
 
-set(CMAKE_C_FLAGS_RELEASE "-O3 -Wall -pedantic")
+set(CMAKE_C_FLAGS_RELEASE "-O3 -Wall -pedantic -DNDEBUG")
 
 set(CMAKE_EXE_LINKER_FLAGS "-g --coverage")
 
