Build .so + update build docs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,4 @@
 add_library(cbor cbor.c cbor_internal.c)
+add_library(cbor_shared SHARED cbor.c cbor_internal.c)
+
+set_target_properties(cbor_shared PROPERTIES OUTPUT_NAME libcbor)
