Streaming tests WIP

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,7 @@ file(GLOB TESTS "*_test.c")
 foreach(TEST ${TESTS})
   string(REGEX REPLACE ".*/([^/]+).c" "\\1" NAME ${TEST})
   message(${NAME})
-  add_executable(${NAME} "${NAME}.c" assertions.c)
+  add_executable(${NAME} "${NAME}.c" assertions.c stream_expectation.c)
   target_link_libraries(${NAME} cmocka)
   target_link_libraries(${NAME} cbor)
   add_test(${NAME} ${NAME})
