uint encoding WIP

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(SOURCES cbor.c cbor_internal.c cbor_stack.c cbor_unicode.c)
+set(SOURCES cbor.c cbor_internal.c cbor_stack.c cbor_unicode.c cbor_encoders.c)
 
 add_library(cbor ${SOURCES})
 add_library(cbor_shared SHARED ${SOURCES})
