--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,15 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get -qq install gcc-4.9
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 90
-compiler:
-  - gcc
-  - clang
-script:
   - git submodule update test/cmocka
   - cd test
   - mkdir cmocka_build && cd cmocka_build
   - cmake ../cmocka
   - make -j 4
-  - make install
+  - sudo make install
   - cd ../..
+compiler:
+  - gcc
+  - clang
+script:
   - export SOURCE=$(pwd) && mkdir /tmp/build && (cd /tmp/build && cmake -DCMAKE_BUILD_TYPE=Debug $SOURCE && make && ctest -V)
