Export cmocka LD path

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - cmake ../cmocka
   - make -j 4
   - sudo make install
+  - export LD_LIBRARY_PATH=/usr/local/lib:${LD_LIBRARY_PATH} 
   - cd ../..
 compiler:
   - gcc
