--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,12 @@ cmake_minimum_required (VERSION 2.8)
 project(libcbor)
 include(CTest)
 
-set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -Wall -pedantic -g -ggdb --coverage -fprofile-arcs -ftest-coverage -DDEBUG=true")
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -Wall -pedantic -g -ggdb -fprofile-arcs -ftest-coverage -DDEBUG=true")
 set(CMAKE_C_FLAGS_RELEASE "-O3 -Wall -pedantic -DNDEBUG")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11")
 
 
-set(CMAKE_EXE_LINKER_FLAGS_DEBUG "-g --coverage -fprofile-arcs -ftest-coverage")
+set(CMAKE_EXE_LINKER_FLAGS_DEBUG "-g -fprofile-arcs -ftest-coverage")
 
 enable_testing()
 
