[travis] custom allocator build matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,9 @@ before_install:
 compiler:
   - gcc
   - clang
+matrix:
+  include:
+    - env: CUSTOM_ALLOC=ON
+    - env: CUSTOM_ALLOC=OFF
 script:
-  - export SOURCE=$(pwd) && mkdir /tmp/build && (cd /tmp/build && cmake -DCMAKE_BUILD_TYPE=Debug $SOURCE && make && ctest -V)
+  - export SOURCE=$(pwd) && mkdir /tmp/build && (cd /tmp/build && cmake -DCUSTOM_ALLOC=$CUSTOM_ALLOC -DCMAKE_BUILD_TYPE=Debug $SOURCE && make && ctest -V)
