--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: c
+
 before_install:
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-get update -qq
@@ -12,12 +13,15 @@ before_install:
   - sudo make install
   - export LD_LIBRARY_PATH=/usr/local/lib:${LD_LIBRARY_PATH} 
   - cd ../..
-compiler:
-  - gcc
-  - clang
+
 matrix:
   include:
-    - env: CUSTOM_ALLOC=ON
-    - env: CUSTOM_ALLOC=OFF
+    - compiler: clang
+      env: CUSTOM_ALLOC=ON
+    - compiler: clang
+      env: CUSTOM_ALLOC=OFF
+    - compiler: gcc
+      env: CUSTOM_ALLOC=OFF
+
 script:
   - export SOURCE=$(pwd) && mkdir /tmp/build && (cd /tmp/build && cmake -DCUSTOM_ALLOC=$CUSTOM_ALLOC -DCMAKE_BUILD_TYPE=Debug $SOURCE && make && ctest -V)
