Eliminate magic.h and install header files properly

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,12 @@ add_library(cbor_shared SHARED ${SOURCES})
 
 set_target_properties(cbor_shared PROPERTIES OUTPUT_NAME cbor)
 
+#http://www.cmake.org/Wiki/CMake:Install_Commands
+
 install(TARGETS cbor cbor_shared
 	ARCHIVE DESTINATION lib
 	LIBRARY DESTINATION lib
 	RUNTIME DESTINATION bin)
+
+install(FILES cbor.h
+	DESTINATION include)
