--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git://git.cryptomilk.org/projects/cmocka.git
 [submodule "doxygen-theme"]
 	path = doxygen-theme
-	url = git@github.com:nnen/doxygen-theme.git
+	url = https://github.com/nnen/doxygen-theme.git
