Attempt to fix RTD integration [4]

--- a/doc/source/requirements.txt
+++ b/doc/source/requirements.txt
@@ -1,83 +1,1 @@
-Django==1.4.5
-FlexGet==1.2
-Jinja2==2.7.3
-MarkupSafe==0.23
-PAM==0.4.2
-Pillow==2.3.0
-PyRSS2Gen==1.1
-PyYAML==3.11
-Pygments==1.6
-Sphinx==1.2.3
-Twisted-Core==13.2.0
-Twisted-Web==13.2.0
-adium-theme-ubuntu==0.3.4
-apt-xapian-index==0.45
-argh==0.23.3
-argparse==1.2.1
-beautifulsoup4==4.3.2
-breathe==4.0.0
-ccsm==0.9.11.3
-chardet==2.0.1
-colorama==0.2.5
-command-not-found==0.3
-compizconfig-python==0.9.11.3
-debtagshw==0.1
-defer==1.0.6
-dirspec==13.10
-dnspython==1.11.1
-docutils==0.12
-dot2tex==2.8.7
-duplicity==0.6.23
-html5lib==1.0b3
-httplib2==0.8
-jsonschema==2.3.0
-livereload==2.0.0
-lockfile==0.8
-lxml==3.3.3
-mercurial==2.8.2
-numpy==1.8.2
-oauthlib==0.6.1
-oneconf==0.3.7
-pathtools==0.1.2
-pexpect==3.1
-piston-mini-client==0.7.5
-progressbar==2.3
-psycopg2==2.5.4
-pyOpenSSL==0.13
-pycrypto==2.6.1
-pycups==1.9.66
-pycurl==7.19.3
-pygobject==3.12.0
-pynzb==0.1.0
-pyparsing==2.0.1
-pyserial==2.6
-pysmbc==1.0.14.1
-python-apt==0.9.3.5ubuntu1
-python-dateutil==2.1
-python-debian==0.1.21-nmu2ubuntu2
-python-tvrage==0.4.1
-python-xlib==0.14
-pyudev==0.16.1
-pyxdg==0.25
-reportlab==3.0
-requests==2.3.0
-roman==2.0.0
-rpyc==3.2.3
-screenkey==0.2
-sessioninstaller==0.0.0
-six==1.5.2
-software-center-aptd-plugins==0.0.0
-sphinx-autobuild==0.2.3
-sphinx-rtd-theme==0.1.6
-system-service==0.1.6
-tmdb3==0.6.17
-tornado==3.1.1
-unity-lens-photos==1.0
-urllib3==1.7.1
-vboxapi==1.0
-virtualenv==1.11.4
-watchdog==0.6.0
-wsgiref==0.1.2
-xdiagnose==3.6.3build2
-youtube-dl==2014.02.17
-zope.interface==4.0.5
+breathe
