--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: c
 
 before_install:
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get install -y lcov
+  - gem install coveralls-lcov
   - sudo apt-get update -qq
   - sudo apt-get -qq install gcc-4.9 libjansson-dev valgrind
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 90
@@ -25,6 +27,10 @@ matrix:
 
 script:
   - export SOURCE=$(pwd) && ./buildscript.sh
+  
+after_success:
+  - lcov --compat-libtool --directory . --capture --output-file coverage.info
+  - coveralls-lcov coverage.info
 
 notifications:
   email: false
