--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get -qq install gcc-4.9 libjansson-dev valgrind
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 90
+  - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-4.9 90
   - git submodule update test/cmocka
   - cd test
   - mkdir cmocka_build && cd cmocka_build
