Add creation example, move construct, string builders

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_executable(readfile readfile.c)
 target_link_libraries(readfile cbor)
+
+add_executable(create_items create_items.c)
+target_link_libraries(create_items cbor)
