Doxygen overhaul: floats

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ if(COVERAGE)
     set(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG} -g -fprofile-arcs -ftest-coverage --coverage")
 endif(COVERAGE)
 
-option(PRETTY_PRINTER "Includ a debug pretty-printing routine" ON)
+option(PRETTY_PRINTER "Include a debug pretty-printing routine" ON)
 if(PRETTY_PRINTER)
     add_definitions(-DPRETTY_PRINTER=1)
 endif(PRETTY_PRINTER)
