--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,3 +6,6 @@ target_link_libraries(create_items cbor)
 
 add_executable(streaming_parser streaming_parser.c)
 target_link_libraries(streaming_parser cbor)
+
+add_executable(sort sort.c)
+target_link_libraries(sort cbor)
