--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,11 @@ cmake_minimum_required(VERSION 2.8)
 project(libcbor)
 include(CTest)
 
+SET(CBOR_VERSION_MAJOR "0")
+SET(CBOR_VERSION_MINOR "3")
+SET(CBOR_VERSION_PATCH "1")
+SET(CBOR_VERSION ${CBOR_VERSION_MAJOR}.${CBOR_VERSION_MINOR}.${CBOR_VERSION_PATCH})
+
 set(CMAKE_SKIP_INSTALL_ALL_DEPENDENCY true)
 include(CheckIncludeFiles)
 
@@ -16,9 +21,9 @@ SET(CPACK_GENERATOR "DEB" "TGZ" "RPM")
 set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
 SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Pavel Kalvoda")
 SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6")
-SET(CPACK_PACKAGE_VERSION_MAJOR "0")
-SET(CPACK_PACKAGE_VERSION_MINOR "3")
-SET(CPACK_PACKAGE_VERSION_PATCH "1")
+SET(CPACK_PACKAGE_VERSION_MAJOR CBOR_VERSION_MAJOR)
+SET(CPACK_PACKAGE_VERSION_MINOR CBOR_VERSION_MINOR)
+SET(CPACK_PACKAGE_VERSION_PATCH CBOR_VERSION_PATCH)
 
 include(CPack)
 
