--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,8 @@ add_library(cbor_shared SHARED ${SOURCES})
 
 set_target_properties(cbor_shared PROPERTIES OUTPUT_NAME cbor)
 
+configure_file(libcbor.pc.in libcbor.pc @ONLY)
+
 #http://www.cmake.org/Wiki/CMake:Install_Commands
 
 install(TARGETS cbor cbor_shared
@@ -27,3 +29,6 @@ install(DIRECTORY cbor DESTINATION include
                 FILES_MATCHING PATTERN "*.h")
 
 install(FILES cbor.h DESTINATION include)
+
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/libcbor.pc"
+        DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/pkgconfig")
