Update all config flags to use values instead of definitions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,12 +15,16 @@ if(HAVE_ENDIAN_H)
     # BSD source needed or else GNU-y extensions will not be visible
     add_definitions(-D_BSD_SOURCE=1)
     add_definitions(-DHAVE_ENDIAN_H=1)
+else()
+    add_definitions(-DHAVE_ENDIAN_H=0)
 endif()
 
 include(TestBigEndian)
 TEST_BIG_ENDIAN(BIG_ENDIAN)
 if(BIG_ENDIAN)
     add_definitions(-DIS_BIG_ENDIAN=1)
+else()
+    add_definitions(-DIS_BIG_ENDIAN=0)
 endif()
 
 SET(CPACK_GENERATOR "DEB" "TGZ" "RPM")
@@ -63,16 +67,22 @@ include_directories(src)
 option(CUSTOM_ALLOC "Custom, dynamically defined allocator support" OFF)
 if(CUSTOM_ALLOC)
     add_definitions(-DCBOR_CUSTOM_ALLOC=1)
+else()
+    add_definitions(-DCBOR_CUSTOM_ALLOC=0)
 endif(CUSTOM_ALLOC)
 
 option(HUGE_FUZZ "Fuzz through 8GB of data in the test. Do not use with memory instrumentation!" OFF)
 if(HUGE_FUZZ)
     add_definitions(-DCBOR_HUGE_FUZZ=1)
+else()
+    add_definitions(-DCBOR_HUGE_FUZZ=0)
 endif(HUGE_FUZZ)
 
 option(SANE_MALLOC "Assume that malloc will not allocate multi-GB blocks. Tests only, platform specific" OFF)
 if(SANE_MALLOC)
     add_definitions(-DCBOR_ASSUME_SANE_MALLOC=1)
+else()
+    add_definitions(-DCBOR_ASSUME_SANE_MALLOC=0)
 endif(SANE_MALLOC)
 
 option(COVERAGE "Enable code coverage instrumentation" OFF)
@@ -89,11 +99,15 @@ endif(COVERAGE)
 option(PRETTY_PRINTER "Include a debug pretty-printing routine" ON)
 if(PRETTY_PRINTER)
     add_definitions(-DPRETTY_PRINTER=1)
+else()
+    add_definitions(-DPRETTY_PRINTER=0)
 endif(PRETTY_PRINTER)
 
 option(PRINT_FUZZ "Print the fuzzer input" OFF)
 if(PRINT_FUZZ)
-    add_definitions(-DCBOR_PRINT_FUZZ=1)
+    add_definitions(-DPRINT_FUZZ=1)
+else()
+    add_definitions(-DPRINT_FUZZ=0)
 endif(PRINT_FUZZ)
 
 set(BUFFER_GROWTH "2" CACHE STRING "Factor for buffer growth & shrinking")
