Add proper definition preprocessing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,26 +64,23 @@ add_custom_target(coverage
 include_directories(src)
 
 
-option(CUSTOM_ALLOC "Custom, dynamically defined allocator support" OFF)
-if(CUSTOM_ALLOC)
-    add_definitions(-DCBOR_CUSTOM_ALLOC=1)
-else()
-    add_definitions(-DCBOR_CUSTOM_ALLOC=0)
-endif(CUSTOM_ALLOC)
+option(CBOR_CUSTOM_ALLOC "Custom, dynamically defined allocator support" OFF)
+set(CBOR_BUFFER_GROWTH "2" CACHE STRING "Factor for buffer growth & shrinking")
 
-option(HUGE_FUZZ "Fuzz through 8GB of data in the test. Do not use with memory instrumentation!" OFF)
+option(HUGE_FUZZ "[TEST] Fuzz through 8GB of data in the test. Do not use with memory instrumentation!" OFF)
 if(HUGE_FUZZ)
-    add_definitions(-DCBOR_HUGE_FUZZ=1)
-else()
-    add_definitions(-DCBOR_HUGE_FUZZ=0)
+    add_definitions(-DHUGE_FUZZ)
 endif(HUGE_FUZZ)
 
-option(SANE_MALLOC "Assume that malloc will not allocate multi-GB blocks. Tests only, platform specific" OFF)
+option(SANE_MALLOC "[TEST] Assume that malloc will not allocate multi-GB blocks. Tests only, platform specific" OFF)
 if(SANE_MALLOC)
-    add_definitions(-DCBOR_ASSUME_SANE_MALLOC=1)
-else()
-    add_definitions(-DCBOR_ASSUME_SANE_MALLOC=0)
+    add_definitions(-DSANE_MALLOC)
 endif(SANE_MALLOC)
+
+option(PRINT_FUZZ "[TEST] Print the fuzzer input" OFF)
+if(PRINT_FUZZ)
+    add_definitions(-DPRINT_FUZZ)
+endif(PRINT_FUZZ)
 
 option(COVERAGE "Enable code coverage instrumentation" OFF)
 if(COVERAGE)
@@ -96,23 +93,10 @@ if(COVERAGE)
     set(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG} -g -fprofile-arcs -ftest-coverage --coverage")
 endif(COVERAGE)
 
-option(PRETTY_PRINTER "Include a debug pretty-printing routine" ON)
-if(PRETTY_PRINTER)
-    add_definitions(-DPRETTY_PRINTER=1)
-else()
-    add_definitions(-DPRETTY_PRINTER=0)
-endif(PRETTY_PRINTER)
 
-option(PRINT_FUZZ "Print the fuzzer input" OFF)
-if(PRINT_FUZZ)
-    add_definitions(-DPRINT_FUZZ=1)
-else()
-    add_definitions(-DPRINT_FUZZ=0)
-endif(PRINT_FUZZ)
-
-set(BUFFER_GROWTH "2" CACHE STRING "Factor for buffer growth & shrinking")
-add_definitions(-DCBOR_BUFFER_GROWTH=${BUFFER_GROWTH})
-
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/cbor/common.h.in ${PROJECT_BINARY_DIR}/common.h)
+install(FILES ${PROJECT_BINARY_DIR}/common.h DESTINATION include/cbor)
+include_directories(${PROJECT_BINARY_DIR})
 
 subdirs(src)
 subdirs(test)
