--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,13 +41,13 @@ if(PRINT_FUZZ)
     add_definitions(-DPRINT_FUZZ)
 endif(PRINT_FUZZ)
 
-SET(CPACK_GENERATOR "DEB" "TGZ" "RPM")
+set(CPACK_GENERATOR "DEB" "TGZ" "RPM")
 set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
-SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Pavel Kalvoda")
-SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6")
-SET(CPACK_PACKAGE_VERSION_MAJOR CBOR_VERSION_MAJOR)
-SET(CPACK_PACKAGE_VERSION_MINOR CBOR_VERSION_MINOR)
-SET(CPACK_PACKAGE_VERSION_PATCH CBOR_VERSION_PATCH)
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Pavel Kalvoda")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6")
+set(CPACK_PACKAGE_VERSION_MAJOR CBOR_VERSION_MAJOR)
+set(CPACK_PACKAGE_VERSION_MINOR CBOR_VERSION_MINOR)
+set(CPACK_PACKAGE_VERSION_PATCH CBOR_VERSION_PATCH)
 
 include(CPack)
 
