Install path fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,7 @@ endif(COVERAGE)
 # path during both library build and installed header use, without littering the source dir.
 # Using cbor/common.h in the build dir works b/c headers will be installe to <prefix>/cbor
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/cbor/common.h.in ${PROJECT_BINARY_DIR}/cbor/common.h)
-install(FILES ${PROJECT_BINARY_DIR}/common.h DESTINATION include/cbor)
+install(FILES ${PROJECT_BINARY_DIR}/cbor/common.h DESTINATION include/cbor)
 # Make the header visible at compile time
 include_directories(${PROJECT_BINARY_DIR})
 
