Build versions fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,9 +46,9 @@ set(CPACK_GENERATOR "DEB" "TGZ" "RPM")
 set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Pavel Kalvoda")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6")
-set(CPACK_PACKAGE_VERSION_MAJOR CBOR_VERSION_MAJOR)
-set(CPACK_PACKAGE_VERSION_MINOR CBOR_VERSION_MINOR)
-set(CPACK_PACKAGE_VERSION_PATCH CBOR_VERSION_PATCH)
+set(CPACK_PACKAGE_VERSION_MAJOR ${CBOR_VERSION_MAJOR})
+set(CPACK_PACKAGE_VERSION_MINOR ${CBOR_VERSION_MINOR})
+set(CPACK_PACKAGE_VERSION_PATCH ${CBOR_VERSION_PATCH})
 
 include(CPack)
 
