--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,21 @@
 language: c
 
+sudo: false
+
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - libjansson-dev
+    - valgrind
+    - cppcheck
+    - lcov
+    - gcc-6
+
+
 before_install:
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-  - sudo apt-get update -qq
-  - sudo apt-get install -y lcov
   - gem install coveralls-lcov
-  - sudo apt-get -qq install gcc-4.9 libjansson-dev valgrind cppcheck
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 90
-  - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-4.9 90
   - git submodule update test/cmocka
   - cd test
   - mkdir cmocka_build && cd cmocka_build
@@ -16,6 +24,9 @@ before_install:
   - sudo make install
   - export LD_LIBRARY_PATH=/usr/local/lib:${LD_LIBRARY_PATH} 
   - cd ../..
+
+install:
+- if [ "$CXX" = "g++" ]; then export CXX="g++-6" CC="gcc-6"; fi
 
 matrix:
   include:
