--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
   - mkdir cmocka_build && cd cmocka_build
   - cmake ../cmocka
   - make -j 4
-  - sudo make install
+  - make install
   - export LD_LIBRARY_PATH=/usr/local/lib:${LD_LIBRARY_PATH} 
   - cd ../..
 
