Disable tests by default

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,18 @@
 file(GLOB TESTS "*_test.c")
 
-foreach(TEST ${TESTS})
-  string(REGEX REPLACE ".*/([^/]+).c" "\\1" NAME ${TEST})
-  message("Adding test ${NAME}")
-  add_executable(${NAME} "${NAME}.c" assertions.c stream_expectations.c)
-  target_link_libraries(${NAME} cmocka)
-  target_link_libraries(${NAME} cbor)
-  add_test(${NAME} ${NAME})
-  add_dependencies(coverage ${NAME})
-endforeach(TEST)
+find_package(CMocka)
+if (CMOCKA_FOUND)
+    include_directories(${CMOCKA_INCLUDE_DIRS})
+else (CMOCKA_FOUND)
+    message(FATAL_ERROR "Couldn't find CMocka (https://cmocka.org/). Please ensure it is installed and in search paths")
+endif (CMOCKA_FOUND)
+
+foreach (TEST ${TESTS})
+    string(REGEX REPLACE ".*/([^/]+).c" "\\1" NAME ${TEST})
+    message("Adding test ${NAME}")
+    add_executable(${NAME} "${NAME}.c" assertions.c stream_expectations.c)
+    target_link_libraries(${NAME} ${CMOCKA_LIBRARIES})
+    target_link_libraries(${NAME} cbor)
+    add_test(${NAME} ${NAME})
+    add_dependencies(coverage ${NAME})
+endforeach (TEST)
