--- a/.travis.yml
+++ b/.travis.yml
@@ -10,20 +10,13 @@ addons:
     - libjansson-dev
     - valgrind
     - cppcheck
+    - cmocka
     - lcov
     - gcc-6
 
 
 before_install:
   - gem install coveralls-lcov
-  - git submodule update test/cmocka
-  - cd test
-  - mkdir cmocka_build ~/libs && cd cmocka_build
-  - cmake -DCMAKE_INSTALL_PREFIX:PATH=~/libs ../cmocka
-  - make -j 4
-  - make install
-  - export LD_LIBRARY_PATH=~libs:${LD_LIBRARY_PATH}
-  - cd ../..
 
 install:
 - if [ "$CXX" = "g++" ]; then export CXX="g++-6" CC="gcc-6"; fi
