--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,11 @@ addons:
 
 before_install:
   - gem install coveralls-lcov
+  - git clone git://git.cryptomilk.org/projects/cmocka.git
+  - mkdir cmocka_build && cd cmocka_build
+  - cmake ../cmocka
+  - make -j 2
+  - make DESTDIR=$HOME install
 
 install:
 - if [ "$CXX" = "g++" ]; then export CXX="g++-6" CC="gcc-6"; fi
