Trying container CI v6

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ before_install:
   - make -j 2
   - make DESTDIR=$HOME install
   - popd
+# Confuses CMake search
+  - rm -r cmocka_build
 
 install:
 - if [ "$CXX" = "g++" ]; then export CXX="g++-6" CC="gcc-6"; fi
