Trying container CI v13

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,11 @@ file(GLOB TESTS "*_test.c")
 
 find_package(CMocka REQUIRED)
 
+get_cmake_property(_variableNames VARIABLES)
+foreach (_variableName ${_variableNames})
+    message(STATUS "${_variableName}=${${_variableName}}")
+endforeach()
+
 if (CMOCKA_FOUND)
     include_directories(${CMOCKA_INCLUDE_DIRS})
 else (CMOCKA_FOUND)
