--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,15 @@ addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
+    - george-edison55-precise-backports # cmake 3.2.3 / doxygen 1.8.3
     packages:
     - libjansson-dev
     - valgrind
     - cppcheck
     - lcov
     - gcc-6
+    - cmake
+    - cmake-data
 
 before_install:
   - gem install coveralls-lcov
