Trying container CI v19

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,7 +8,7 @@ foreach (TEST ${TESTS})
     add_executable(${NAME} "${NAME}.c" assertions.c stream_expectations.c)
     target_link_libraries(${NAME} ${CMOCKA_LIBRARIES})
     target_link_libraries(${NAME} cbor)
-    target_include_directories(${NAME} ${CMocka_INCLUDE_DIR})
+    target_include_directories(${NAME} PUBLIC ${CMocka_INCLUDE_DIR})
     add_test(${NAME} ${NAME})
     add_dependencies(coverage ${NAME})
 endforeach (TEST)
