--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(SOURCES cbor.c cbor/streaming.c cbor/internal/encoders.c cbor/internal/builder_callbacks.c cbor/internal/loaders.c cbor/internal/memory_utils.c cbor/internal/stack.c cbor/internal/unicode.c cbor/encoding.c cbor/serialization.c cbor/arrays.c cbor/common.c cbor/floats_ctrls.c cbor/bytestrings.c cbor/callbacks.c cbor/strings.c cbor/maps.c cbor/tags.c cbor/ints.c)
 
+include(GNUInstallDirs)
 set(CMAKE_SKIP_BUILD_RPATH FALSE)
-
 
 if (CBOR_CUSTOM_ALLOC)
     LIST(APPEND SOURCES allocators.c)
@@ -20,9 +20,9 @@ configure_file(libcbor.pc.in libcbor.pc @ONLY)
 
 #http://www.cmake.org/Wiki/CMake:Install_Commands
 
-install(TARGETS cbor cbor_shared
-	ARCHIVE DESTINATION lib
-	LIBRARY DESTINATION lib
+install(TARGETS cbor  cbor_shared
+	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 	RUNTIME DESTINATION bin)
 
 install(DIRECTORY cbor DESTINATION include
@@ -31,4 +31,4 @@ install(DIRECTORY cbor DESTINATION include
 install(FILES cbor.h DESTINATION include)
 
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/libcbor.pc"
-        DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/pkgconfig")
+	DESTINATION "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/pkgconfig")
