--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -10,6 +10,15 @@ target_link_libraries(streaming_parser cbor)
 add_executable(sort sort.c)
 target_link_libraries(sort cbor)
 
-
 add_executable(hello hello.c)
 target_link_libraries(hello cbor)
+
+find_package(cJSON)
+
+if(cJSON_FOUND)
+    add_executable(cjson2cbor cjson2cbor.c)
+    target_link_libraries(cjson2cbor cbor cjson)
+endif()
+
+file(COPY data DESTINATION .)
+
